<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-thin"
        android:text="@string/custom_ui_title"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/holder_text_input_layout"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <EditText
            android:id="@+id/holder_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/card_holder_hint"
            android:background="@drawable/opp_btn_background_payment"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="@dimen/base_text_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--<com.google.android.material.textfield.TextInputLayout
        android:id="@+id/number_text_input_layout"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/holder_text_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/holder_text_input_layout">

        <EditText
            android:id="@+id/number_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/card_number_hint"
            android:background="@drawable/opp_btn_background_payment"
            android:inputType="number"
            android:maxLength="20"
            android:textSize="@dimen/base_text_size" />

    </com.google.android.material.textfield.TextInputLayout>-->

    <com.devmarvel.creditcardentry.library.CreditCardForm
        android:id="@+id/number_text_input_layout"
        style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:background="@drawable/opp_btn_background_payment"
        android:visibility="visible"
        app:card_number_hint="42XXXXXXXXXXXXXXXXX"
        app:cursor_color="@color/black"
        app:hint_text_color="@color/black"
        app:include_exp="false"
        app:include_helper="false"
        app:include_security="false"
        app:include_zip="false"
        app:input_background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/holder_text_input_layout"
        app:text_color="@color/black" />

   <!-- <ImageView
        android:id="@+id/payment_method_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@id/number_text_input_layout"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/visa"
        android:src="@drawable/visa"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/number_text_input_layout"
        app:layout_constraintEnd_toEndOf="@+id/number_text_input_layout"
        app:layout_constraintTop_toTopOf="@+id/number_text_input_layout"
        app:tint="@color/colorAccent" />-->


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/expiry_month_text_input_layout"
        style="@style/TextInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/number_text_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_text_input_layout">

        <EditText
            android:id="@+id/expiry_month_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/card_expiry_month_hint"
            android:background="@drawable/opp_btn_background_payment"
            android:inputType="number"
            android:maxLength="2"
            android:textSize="@dimen/base_text_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/expiry_date_delimiter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/expiry_month_text_input_layout"
        android:layout_toEndOf="@id/expiry_month_text_input_layout"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/date_delimiter"
        android:layout_marginStart="20dp"
        android:textSize="@dimen/base_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/expiry_month_text_input_layout"
        app:layout_constraintStart_toEndOf="@+id/expiry_month_text_input_layout"
        app:layout_constraintTop_toTopOf="@+id/expiry_month_text_input_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/expiry_year_text_input_layout"
        style="@style/TextInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_below="@id/number_text_input_layout"
        android:layout_toEndOf="@id/expiry_date_delimiter"
        app:layout_constraintBottom_toBottomOf="@+id/expiry_month_text_input_layout"
        app:layout_constraintStart_toEndOf="@+id/expiry_date_delimiter"
        app:layout_constraintTop_toTopOf="@+id/expiry_month_text_input_layout">

        <EditText
            android:id="@+id/expiry_year_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/card_expiry_year_hint"
            android:background="@drawable/opp_btn_background_payment"
            android:inputType="number"
            android:maxLength="2"
            android:textSize="@dimen/base_text_size" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cvv_text_input_layout"
        style="@style/TextInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_below="@id/number_text_input_layout"
        android:layout_toEndOf="@id/expiry_year_text_input_layout"
        app:layout_constraintBottom_toBottomOf="@+id/expiry_year_text_input_layout"
        app:layout_constraintStart_toEndOf="@+id/expiry_year_text_input_layout"
        app:layout_constraintTop_toTopOf="@+id/expiry_year_text_input_layout">

        <EditText
            android:id="@+id/cvv_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/card_cvv_hint"
            android:background="@drawable/opp_btn_background_payment"
            android:inputType="number"
            android:maxLength="4"
            android:textSize="@dimen/base_text_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_pay_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cvv_text_input_layout"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/opp_btn_background_payment"
        android:fontFamily="sans-serif-condensed"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingRight="20dp"
        android:paddingBottom="5dp"
        android:text="@string/button_pay_now"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/number_text_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/cvv_text_input_layout" />

    <ProgressBar
        android:id="@+id/progress_bar_custom_ui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_pay_now"
        android:layout_centerHorizontal="true"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        android:layout_marginTop="20dp"
        android:paddingBottom="15dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_pay_now" />



</androidx.constraintlayout.widget.ConstraintLayout>
